# insurance_fills_service

./: .env_example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflow/: validation.yaml
.github/workflows/: deploy.yaml  validation.yaml
frontend/: .env_example  additional_options.py  app.py  app_text_chat.py  app_voice_chat.py  audio_recorder.py  create_insurance_request.py  frontend_app.py  utils.py
insurance_fills_service/: insurance_fills_service_stack.py
insurance_fills_service/constructs/: user.py
lambdas/create_get/: constants.py
lambdas/crud/: GPT4_assistant.py  app.py  constants.py  create_get.py
lambdas/fill_insurance/: Dockerfile  GPT4_assistant.py  app.py  update.py
lambdas/update/: Dockerfile  requirements.txt  update_lambda.py
notebooks/: .env_example  OpenAI conversation.ipynb  OpenAI_conversation_short.ipynb  OpenAI_hello_world.ipynb  call_api_sample.py  get secret from secrets manager.ipynb  text_to_speech.ipynb
src/: index.py
